@@ -9,12 +9,12 @@ import org.cloudfoundry.samples.music.domain.Message;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import org.springframework.ai.client.Generation;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Profile;
 import org.springframework.web.bind.annotation.*;
+
 
 @RestController
 @Profile("llm")
@@ -37,35 +37,31 @@ public class AIController {
         this.messageRetriever = messageRetriever;
         this.vectorStore = vectorStore;
     }
+    
     @RequestMapping(value = "/ai/rag", method = RequestMethod.POST)
-    public Generation generate(@RequestBody MessageRequest messageRequest) {
+    public Map<String,Object> generate(@RequestBody MessageRequest messageRequest) {
         Message[] messages = messageRequest.getMessages();
         logger.info("Getting Messages " + messages);
 
-        return messageRetriever.retrieve(messages[messages.length - 1].getText());
-    }
+        String query = messages[messages.length - 1].getText();
+        String result = messageRetriever.retrieve(query);
 
+        return Map.of("text",result);
+    }
 
     @RequestMapping(value = "/ai/addDoc", method = RequestMethod.POST)
     public String addDoc(@RequestBody Album album) {
-
         String text = generateVectorDoc(album);
-
-        List<Document> documents = new ArrayList<>();
         Document doc = new Document(album.getId(), text, new HashMap<>());
         logger.info("Adding Album " + doc.toString());
-        documents.add(doc);
-        this.vectorStore.add(documents);
+        this.vectorStore.add(List.of(doc));
         return text;
     }
 
     @RequestMapping(value = "/ai/deleteDoc", method = RequestMethod.POST)
     public String deleteDoc(@RequestBody String id) {
         logger.info("Deleting Album " + id);
-        this.vectorStore.delete(Collections.singletonList(id));
+        this.vectorStore.delete(List.of(id));
         return id;
     }
-
-
-
 }
